[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/components/player/energy_shield/EnergyShield.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/player/energy_shield/textures/shield_1.png" type="Texture" id=2]
[ext_resource path="res://scenes/components/player/energy_shield/textures/shield_0.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/player/energy_shield/audio/activated.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/components/player/energy_shield/audio/reflected.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=2]
radius = 64.4981

[sub_resource type="Animation" id=1]
resource_name = "activating"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shield0:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 2, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.11, 0.14, 0.18, 0.2 ),
"transitions": PoolRealArray( 1, 1, 0.5, 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "deactivating"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shield0:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.07, 0.1 ),
"transitions": PoolRealArray( 1, 2, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03, 0.05, 0.08, 0.1 ),
"transitions": PoolRealArray( 2, 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "protection"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shield1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.11, 0.15 ),
"transitions": PoolRealArray( 2, 2, -0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.15 ),
"transitions": PoolRealArray( 2, 0.5, 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.690196, 0, 1 ), Color( 1, 0.690196, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shield0:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shield1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "pulse"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Shield1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.764706, 0.764706, 0.764706, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnergyShield" type="Area2D"]
collision_layer = 8
collision_mask = 132096
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Activate" type="AnimationPlayer" parent="."]
anims/activating = SubResource( 1 )
anims/deactivating = SubResource( 7 )
anims/protection = SubResource( 4 )
anims/reset = SubResource( 3 )

[node name="Pulse" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/pulse = SubResource( 6 )

[node name="Shield0" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shield1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Activated" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="Reflected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.8
bus = "Effects"

[connection signal="area_entered" from="." to="." method="_on_EnergyShield_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnergyShield_body_entered"]
[connection signal="animation_finished" from="Activate" to="." method="_on_Activate_animation_finished"]
